--- a/src/components/fileUploader/Form.module.css
+++ b/src/components/fileUploader/Form.module.css
@@ -1,15 +1,19 @@
 .container {
     display: flex;
     align-items: center;
+    min-width: 750px;
     justify-content: center;
     flex-direction: column;
     padding: 40px;
-}
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;}
 
 .buttons {
     justify-content: center;
+    margin-top: 20px;
 }
-
 
 .root {
     width: "100%";
@@ -22,4 +26,16 @@
 .instructions {
     margin-bottom: 10px;
     margin-top: 10px;
+}
+
+.uploadSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.matchBackDivider {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
